@@ -235,6 +235,7 @@ public class DocumentBuilder {
       SchemaField sfield = schema.getFieldOrNull(name);
       boolean used = false;
       float boost = field.getBoost();
+      boolean omitNorms = sfield != null && sfield.omitNorms();
       
       // Make sure it has the correct number
       if( sfield!=null && !sfield.multiValued() && field.getValueCount() > 1 ) {
@@ -243,6 +244,11 @@ public class DocumentBuilder {
               sfield.getName() + ": " +field.getValue() );
       }
       
+      if (omitNorms && boost != 1.0F) {
+        throw new SolrException( SolrException.ErrorCode.BAD_REQUEST,
+            "ERROR: "+getID(doc, schema)+"cannot set an index-time boost, norms are omitted for field " + 
+              sfield.getName() + ": " +field.getValue() );
+      }
 
       // load each field value
       boolean hasField = false;
@@ -254,7 +260,7 @@ public class DocumentBuilder {
           hasField = true;
           if (sfield != null) {
             used = true;
-            addField(out, sfield, v, docBoost*boost);
+            addField(out, sfield, v, omitNorms ? 1F : docBoost*boost);
           }
   
           // Check if we should copy this field to any other fields.
@@ -277,7 +283,7 @@ public class DocumentBuilder {
               val = cf.getLimitedValue((String)val);
             }
             
-            IndexableField [] fields = destinationField.createFields(val, docBoost*boost);
+            IndexableField [] fields = destinationField.createFields(val, omitNorms ? 1F : docBoost*boost);
             if (fields != null) { // null fields are not added
               for (IndexableField f : fields) {
                 if(f != null) out.add(f);
